# Forcasting_inventory

./: Dockerfile  Jenkinsfile  README.rst  bb-pipeline-download-file.sh  bitbucket-pipelines.yml  build_docker_image.sh  docker-compose.yaml  mypy.ini  ow_commit_checker.sh  pyproject.toml  pytest.ini  setup_owforecasting.sh  setup_poetry.sh  setup_pyenv.sh
00 Config/: README.rst
01 Raw data/: DSX_exogenous_features.csv
docs/: .gitignore  Makefile  conf.py  copyright_notice.rst  forecasting_platform.rst  forecasting_platform_cli.rst  forecasting_platform_forecasting.rst  forecasting_platform_helpers.rst  forecasting_platform_internal_schema.rst  forecasting_platform_model_config_scripts.rst  forecasting_platform_services.rst  forecasting_platform_static.rst  index.rst  modules.rst  owforecasting.rst  setup_docker.rst  show_docs.sh  usage.rst  windows_installation.rst
forecasting_platform/: __main__.py  conftest.py  main_test.py  master_config.py
forecasting_platform/cli/: __init__.py  compare_results.py  compare_results_test.py  compare_structure.py  compare_structure_database.py  compare_structure_database_test.py  compare_structure_test.py  (+8 more)
h2o-server/: Dockerfile
jenkins/: Dockerfile  ow_testing_pipeline_install.sh  ow_testing_pipeline_run_tests.ps1
mssql/: odbc_dsn_ubuntu.ini  setup_odbc_ubuntu.sh
notebooks/: Extract_expected_results.ipynb  FC_Account_Template.ipynb  clean_notebooks.sh  dump_mssql_schema.ipynb  test_notebooks.sh
windows_installation/: .gitignore  README.rst  create_zip.sh  install_forecasting_platform.ps1  run_forecasting_platform.ps1
(+121 files in other folders)
